<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Static shortcuts for quick actions -->
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sss"
            android:targetClass="com.example.sss.MainActivity"
            android:data="sss://search" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="search" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="scan_qr"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_camera"
        android:shortcutShortLabel="@string/shortcut_scan_qr_short"
        android:shortcutLongLabel="@string/shortcut_scan_qr_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sss"
            android:targetClass="com.example.sss.MainActivity"
            android:data="sss://scan/qr" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="scan_qr" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="scan_nfc"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_compass"
        android:shortcutShortLabel="@string/shortcut_scan_nfc_short"
        android:shortcutLongLabel="@string/shortcut_scan_nfc_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sss"
            android:targetClass="com.example.sss.MainActivity"
            android:data="sss://scan/nfc" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="scan_nfc" />
        </capability-binding>
    </shortcut>

    <!-- App Actions capabilities -->
    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sss"
            android:targetClass="com.example.sss.MainActivity">
            <parameter android:name="feature" android:key="feature" />
        </intent>
    </capability>

    <capability android:name="actions.intent.GET_THING">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sss"
            android:targetClass="com.example.sss.MainActivity"
            android:data="sss://search">
            <parameter android:name="thing.name" android:key="query" />
        </intent>
    </capability>

</shortcuts>
